# matchering

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  .python-version  CLAUDE.md  CODE_OF_CONDUCT.md  DEVELOPMENT_ROADMAP.md  DOCKER.md  DOCKER_LINUX.md  DOCKER_MACOS.md  DOCKER_UPDATING.md  DOCKER_WINDOWS.md  Dockerfile  LIMITER_TEST.md  LOG_CODES.md  Makefile  NEXT_STEPS.md  PERFORMANCE_BENCHMARKS.md  PRESS.md  PROGRESS_SUMMARY.md  PROJECT_STATUS.md  README.md  README_TESTS.md  REPOSITORY_CLEANUP_SUMMARY.md  SUPPORTERS.md  TEST_FIXES_SUMMARY.md  THOUGHTS.md  auralis.spec  auralis_gui.py  build_auralis.py  cog.yaml  demo_dsp_fixed.py  demo_dsp_processing.py  demo_matchering_player.py  fconv.m  generate_test_audio.py  gui_demo.py  index.html  launch_gui.py  (+27 more)
.github/: FUNDING.yml
archive_old_tests/: test_config.py  test_core_functionality.py  test_core_library.py  test_error_handling.py  test_frequency_matching.py  test_integration_regression.py  test_pipewire_demo.py  test_stereo_width.py  test_suite_runner.py
auralis/: __init__.py
backend/: __init__.py  main.py  requirements.txt
docs/: CLAUDE.md  COVERAGE_ANALYSIS.md  DEVELOPMENT_ROADMAP.md  DOCKER.md  DOCKER_MACOS.md  DOCKER_UPDATING.md  MATCHERING_PLAYER_FEATURES.md  MATCHERING_PLAYER_PLAN.md  MVP_COMPLETED.md  PRESS.md  README.md  WARP.md  analyzer_api.md  audio_processing.md  frequency_analyzer.md  player_architecture.md  plugin_system.md  product_vision.md  roadmap.md  test_signals.md  ui_architecture.md  ui_design.md
examples/: advanced_results.py  advanced_text_output.py  basic.py  edited_config.py  with_preview.py
frontend/: package-lock.json  package.json
matchering/: __init__.py  checker.py  checks.py  core.py  defaults.py  dsp.py  exceptions.py  limiter.py  loader.py  preview_creator.py  preview_maker.py  results.py  saver.py  stages.py  utils.py
matchering.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
matchering_player/: __init__.py
page/: browserconfig.xml  manifest.json
(+145 files in other folders)
